# alea

./: .gitignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  deny.toml  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  validation-report-phase3-cu.json  validation-report-phase3-failures.json  validation-report.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: idl-diff.yml  lint.yml  publish-npm-only.yml  publish-ts-sdk-020.yml  release.yml  sdk-ts.yml  supply-chain.yml  test.yml
audit/phase-4.5/: FINDINGS-CONSOLIDATED.md  THREAT-MODEL.md  api-stability-findings.md
audit/phase-4.5/integration/: rust-sdk-integration.md  rust-sdk-reverify-jaiden.md  ts-sdk-integration.md  ts-sdk-reverify-tanya.md
audit/phase-4.5/personas/: alicia-npm-consumer.md  ben-rust-ecosystem-maintainer.md  dmitri-anchor-author.md  kai-browser-dapp-dev.md  maya-rust-crate-consumer.md  nia-ts-ecosystem-reviewer.md  priya-solana-security-auditor.md  raul-web3-client-security.md
audit/phase-4.5/red-team/: fen-drand-adversary.md  hana-crypto-edge-cases.md  lin-api-fuzzer.md  marcus-replay-griefing.md
docs/: CLAUDE-DESIGN-PROMPT-v2.md  DECISION.md  RELAYER-API.md  SITE-DESIGN.md
programs/alea-verifier/: Cargo.toml
programs/alea-verifier/fuzz/: .gitignore  Cargo.toml  README.md
programs/alea-verifier/fuzz/fuzz_targets/: hash_to_field_canonicity.rs  hash_to_g1.rs  on_curve_g1.rs  pairing_buffer_parses.rs  verify_beacon.rs
programs/alea-verifier/fuzz/scripts/: launch.sh  package-proof.sh  seed-corpus.py  status.sh
programs/alea-verifier/src/: errors.rs  events.rs  lib.rs  state.rs
programs/alea-verifier/src/crypto/: constants.rs  expand_message.rs  hash_to_g1.rs  mod.rs  optimized_exp.rs  pairing.rs  svdw.rs
programs/alea-verifier/src/instructions/: initialize.rs  map_to_point_debug.rs  mod.rs  probe_cu.rs  probe_g2.rs  update_config.rs  verify.rs
programs/alea-verifier/tests/: idl_discriminators.rs
programs/cpi-consumer/: Cargo.toml
programs/cpi-consumer/src/: lib.rs
programs/example-lottery/: Cargo.toml
programs/example-lottery/src/: errors.rs  lib.rs
scripts/: attest-evmnet-pubkey.go  devnet-verify-loop.ts  go.mod  go.sum  initialize.ts
sdk/rust/: CAVEATS.md  Cargo.toml  README.md
sdk/rust/src/: accounts.rs  cpi.rs  errors.rs  lib.rs
sdk/rust/tests/: devnet_clock.rs  devnet_verify.rs  fixtures.rs  is_round_recent.rs
sdk/typescript/: CAVEATS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  package.json  tsconfig.json
sdk/typescript/scripts/: generate-idl-ts.mjs
sdk/typescript/src/: client.ts  constants.ts  drand.ts  errors.ts  idl.ts  index.ts  instruction.ts  types.ts
sdk/typescript/src/idl/: alea_verifier.json
sdk/typescript/tests/: client.test.ts  devnet_integration.test.ts  devnet_with_meta.test.ts  drand.test.ts  fixtures.ts  isRoundRecent.test.ts  round.test.ts  verify-with-meta.test.ts
tests/: alea.ts  bpf-probes.ts  cu-benchmark.ts  example-lottery.ts  map-to-point-diff.ts
