[workspace]
members = [
    "programs/alea-verifier",
    "programs/cpi-consumer",
    "sdk/rust",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "=0.30.1"
ark-ff = { version = "=0.5.0", default-features = false }
ark-bn254 = { version = "=0.5.0", default-features = false, features = ["curve"] }
ark-ec = { version = "=0.5.0", default-features = false }
ark-serialize = { version = "=0.5.0", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[patch.crates-io]
# May need patched ark-ff (see ADR 0023 — exhaustive attempt order)
# ark-ff = { git = "https://github.com/azixus/algebra", branch = "fix/fieldHasher-v0.5.0" }
