[workspace]
members = [
    "programs/alea-verifier",
    "programs/cpi-consumer",
    "programs/example-lottery",
    "sdk/rust",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "=0.30.1"
ark-ff = { version = "=0.5.0", default-features = false }
ark-bn254 = { version = "=0.5.0", default-features = false, features = ["curve"] }
ark-ec = { version = "=0.5.0", default-features = false }
ark-serialize = { version = "=0.5.0", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

# Phase 4.5 T1-15: [patch.crates-io] removed. Having a live table header
# (even with all entries commented) signals a fragile dep posture to grant
# reviewers, and accidental uncomment would poison every downstream
# consumer's lockfile. Re-add if genuinely needed in the future.
