[workspace]
members = [
    "programs/alea-verifier",
    "programs/example-lottery",
    "sdk/rust",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "=0.30.1"
ark-ff = { version = "=0.6.0", default-features = false }
ark-bn254 = { version = "=0.6.0", default-features = false, features = ["curve"] }
ark-ec = { version = "=0.6.0", default-features = false }
ark-serialize = { version = "=0.6.0", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

# Intentionally no [patch.crates-io] — keeps dep resolution pristine.
# A live table (even commented) reads as fragile dep posture and an
# accidental uncomment would poison every downstream consumer's lockfile.
