[package]
name = "alea-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "On-chain drand BN254 BLS verifier for Solana"
repository = "https://github.com/alea-drand/alea"

[lib]
crate-type = ["cdylib", "lib"]
name = "alea_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-bpf = []
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
# Phase 1.1.A adds these after BPF compilation validation (ADR 0023):
# ark-ff = { workspace = true, default-features = false }
# ark-bn254 = { workspace = true, default-features = false }
# ark-ec = { workspace = true, default-features = false }
# solana-program = { workspace = true }
# solana-bn254 = "=2.2"
# hex-literal = "=0.4.1"
# once_cell = { version = "1", default-features = false }



