[package]
name = "alea-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "On-chain drand BN254 BLS verifier for Solana"
repository = "https://github.com/alea-drand/alea"

[lib]
crate-type = ["cdylib", "lib"]
name = "alea_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-bpf = []
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }



