[package]
name = "alea-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "On-chain drand BN254 BLS verifier for Solana"
repository = "https://github.com/alea-drand/alea"
keywords = ["solana", "drand", "randomness", "bls", "bn254"]
categories = ["cryptography", "no-std"]

[package.metadata.docs.rs]
features = ["no-entrypoint"]

[lib]
crate-type = ["cdylib", "lib"]
name = "alea_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-bpf = []
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }

[dev-dependencies]
hex-literal = "0.4"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

