[package]
name = "cpi-consumer"
version = "0.1.0"
description = "Test-only fixture: CPI consumer that calls alea_verifier::cpi::verify"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_consumer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
alea-verifier = { path = "../alea-verifier", features = ["cpi"] }
