[package]
name = "alea-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CPI crate for Alea — drand BN254 BLS randomness verifier on Solana"
repository = "https://github.com/alea-drand/alea"
homepage = "https://alea.so"
documentation = "https://docs.rs/alea-sdk"
readme = "README.md"
keywords = ["solana", "drand", "randomness", "bls", "bn254"]
categories = ["cryptography", "no-std"]

[lib]
name = "alea_sdk"

[features]
default = []
cpi = ["alea-verifier/cpi"]

[dependencies]
anchor-lang = { workspace = true }
alea-verifier = { path = "../../programs/alea-verifier", features = ["cpi"] }

# dev-dependencies are only used by `tests/devnet_clock.rs` (`--ignored`
# by default so normal `cargo test` does not touch devnet). Versions pinned
# to 1.18.x to match the resolved solana-program in the workspace
# (anchor-lang 0.30.1 → solana-program 1.18.26).
[dev-dependencies]
solana-client = "=1.18.26"
solana-sdk = "=1.18.26"
solana-transaction-status = "=1.18.26"
bincode = "=1.3.3"
hex-literal = "0.4"

[package.metadata.docs.rs]
features = ["cpi"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
